--- a/JavaWeb-exAvaliacao/WebContent/cadastro-aluno.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro-aluno.xhtml
@@ -7,8 +7,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:jsf="http://xmlns.jcp.org/jsf/"
 	xmlns:pa="http://xmlns.jcp.org/jsf/passthrough"
-	xmlns:p="http://primefaces.org/ui">
-
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 <h:body>
 
@@ -21,131 +21,156 @@
 			<div class=" container top-landing">
 				<h2>Cadastro de Alunos</h2>
 				<h:form>
+				<h:inputHidden
+						value="#{alunoCadastroBean.aluno.rmAluno}" />
 
-
-					<div class="col-md-6">
-						<div class="form-group">
-							<h:outputLabel value="Registro de Matrícula"
-								style="font-weight:bold" />
-							<h:inputText pa:placeholder="Registro de Matrícula(Somente números)" value="#{alunoBean.aluno.rm}"
-										styleClass="form-control"  />
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								<h:outputLabel value="Registro de Matrícula"
+									style="font-weight:bold" />
+								<h:inputText
+									pa:placeholder="Registro de Matrícula(Somente números)"
+									value="#{alunoCadastroBean.aluno.rmAluno}" disabled="true"
+									styleClass="form-control" />
+							</div>
 						</div>
 
+						<div class="col-md-6">
+							<div class="form-group">
+								<h:outputLabel value="Nome" style="font-weight:bold" />
 
-						<div class="form-group">
-							<h:outputLabel value="Nome" style="font-weight:bold" />
+								<h:inputText pa:placeholder="Nome Completo"
+									value="#{alunoCadastroBean.aluno.nome}"
+									styleClass="form-control" />
 
-							<h:inputText pa:placeholder="Nome Completo" value="#{alunoBean.aluno.nome}"
-										styleClass="form-control"  />
-
+							</div>
 						</div>
+					</div>
 
-						<div class="form-group">
 
-							<h:outputLabel value="Email" style="font-weight:bold" />
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
 
-							<h:inputText pa:placeholder="Email"  value="#{alunoBean.aluno.email}"
-										styleClass="form-control"  />
+								<h:outputLabel value="Email" style="font-weight:bold" />
 
+								<h:inputText pa:placeholder="Email"
+									value="#{alunoCadastroBean.aluno.email}"
+									styleClass="form-control" />
+
+							</div>
 						</div>
-						<div class="form-group">
+						<div class="col-md-6">
+							<div class="form-group">
 
-							<h:outputLabel value="Data de Nascimento"
-								style="font-weight:bold" />
+								<h:outputLabel value="Telefone" style="font-weight:bold" />
 
-							<h:inputText pa:type="date" pa:placeholder="Data de Nascimento"  value="#{alunoBean.aluno.dataNasc}"
-										styleClass="form-control"  />
+								<h:inputText pa:placeholder="Telefone"
+									value="#{alunoCadastroBean.aluno.tel}"
+									styleClass="form-control tel" />
 
 
+							</div>
+						</div>
+					</div>
+
+
+
+					<div class="row">
+						<div class="col-md-6">
+
+							<div class="form-group">
+
+								<h:outputLabel value="Endereco" style="font-weight:bold" />
+
+								<h:inputText pa:placeholder="Endereço"
+									value="#{alunoCadastroBean.aluno.endereco}" styleClass="form-control" />
+
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+
+								<h:outputLabel value="Data de Nascimento"
+									style="font-weight:bold" />
+
+								<h:inputText pa:placeholder="Data de Nascimento"
+									value="#{alunoCadastroBean.aluno.dataNasc}"
+									styleClass="form-control date" >
+									<f:convertDateTime pattern="dd/mm/yyyy" /></h:inputText>
+
+							</div>
 						</div>
 					</div>
 
 
 
 
-					<div class="col-md-6">
-						<div class="form-group">
+					<div class="row">
+						<div class="col-sm-12">
 
-							<h:outputLabel value="Endereco" style="font-weight:bold" />
 
-							<h:inputTex  pa:placeholder="Endereço" value="#{alunoBean.aluno.endereco}"
-										styleClass="form-control"  />
 
-						</div>
+							<div class="form-group">
 
-						<div class="form-group">
 
-							<h:outputLabel value="Telefone" style="font-weight:bold" />
+								<h:outputLabel value="Curso" style="font-weight:bold" />
+								<h:selectOneMenu converter="#{simpleEntityConverter}"
+									styleClass="form-control select select-primary select-block mbl"
+									value="#{alunoCadastroBean.aluno.curso}">
+									
+									<f:selectItems value="#{alunoCadastroBean.listCurso}" var="cur"
+										itemValue="#{cur}" itemLabel="#{cur.nome}" />
+								</h:selectOneMenu>
 
-							<h:inputText pa:placeholder="Telefone"  value="#{alunoBean.aluno.tel}"
-										styleClass="form-control"  />
 
-						</div>
 
-						<div class="form-group">
-
-							<h:outputLabel value="Escola" style="font-weight:bold" />
-
-							<select
-								class="form-control select select-primary">
-								<optgroup label="Profile">
-									<option value="0">My Profile</option>
-									<option value="1">My Friends</option>
-								</optgroup>
-								<optgroup label="System">
-									<option value="2">Messages</option>
-									<option value="3">My Settings</option>
-									<option value="4">Logout</option>
-								</optgroup>
-							</select>
-
-							<script type="text/javascript">
+								<script type="text/javascript">
 								$(document).ready(function() {
-									$("select").select2();
+									$("select").select2({
+										
+									});
+									$(function() {
+										   $(".date").inputmask( 'dd/mm/yyyy' );
+										   $(".tel").inputmask( '9999-99999' );
+									});
 								});
 							</script>
+							</div>
 
 						</div>
-
-						<div class="form-group">
-
-							<h:outputLabel value="Curso" style="font-weight:bold" />
-
-							<select class="form-control select select-primary" id="cb-frentes" required="required"
-								size="1" jsf:value="#{checkstyleBean.frente}">
-								<option value="#{null}" jsfc="f:selectItem" />
-									<optgroup label="Profile">
-									<option value="0">My Profile</option>
-									<option value="1">My Friends</option>
-								</optgroup>
-								<optgroup label="System">
-									<option value="2">Messages</option>
-									<option value="3">My Settings</option>
-									<option value="4">Logout</option>
-								</optgroup>
-								<ui:repeat value="#{appBean.frentes}" var="frente"
-									jsfc="f:selectItems">
-									<option value="#{frente}">#{frente}</option>
-								</ui:repeat>
-							</select>
-
+					</div>
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="form-group">
+								<c:if test="${alunoCadastroBean.aluno.nome != null}">
+									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+										action="#{alunoCadastroBean.atualizarAluno()}"
+										type="submit" value="Atualizar" />
+								</c:if>
+								<c:if test="${alunoCadastroBean.aluno.nome == null}">
+									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+										action="#{alunoCadastroBean.cadastrarAluno()}"
+										type="submit" value="Cadastrar" />
+								</c:if>
+							</div>
 						</div>
-
-
 					</div>
 
 
 
-					<div class="col-sm-12">
-
-						<div class="form-group">
 
 
 
-							<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-								value="Enviar" />
-						</div>
-					</div>
+
+
+
+
+
+
+
+
 
 
 				</h:form>
