Movendo xhtml para pastas separadas

--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-disciplina.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-disciplina.xhtml
@@ -16,7 +16,7 @@
 
 
 
-	<ui:composition template="_template.xhtml">
+	<ui:composition template="/template/_template.xhtml">
 		<ui:define name="title">
 	    Cadastro de Disciplina
 	</ui:define>
