--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-professor.xhtml
@@ -13,7 +13,7 @@
 
 <h:body>
 
-	<ui:composition template="_template.xhtml">
+	<ui:composition template="/template/_template.xhtml">
 		<ui:define name="title">
 	    Cadastro de Professor
 	</ui:define>
