--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
@@ -9,62 +9,60 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 <h:body>
-	<ui:composition template="_template.xhtml">
+	<ui:composition template="/template/_template.xhtml">
 		<ui:define name="title">
-	    Lista de Cursos
+	    Lista de Disciplinas
 	</ui:define>
 
 		<ui:define name="content">
 			<div class="container top-landing">
 				<h:messages />
 				<h:form prependId="false">
-					<h2>Lista de Cursos</h2>
+					<h2>Lista de Disciplinas</h2>
 					<div class="row">
 						<div class="col-sm-12">
-							<p:dataTable id="cursoTable" widgetVar="cursoTable" class="table"
-								var="cur" value="#{cursoListaBean.listCurso}">
+							<p:dataTable emptyMessage="Nenhum resultado encontrado" id="disciplinaTable" widgetVar="disciplinaTable"
+								class="table" var="dis"
+								value="#{disciplinaListaBean.listDisciplina}">
 								<p:column headerText="Nome">
-									<h:outputText value="#{cur.nome}" />
+									<h:outputText value="#{dis.nome}" />
 								</p:column>
 
-								<p:column headerText="Data de Início">
-									<h:outputText value="#{cur.dataInicio}"></h:outputText>
+								<p:column headerText="Descriçao">
+									<h:outputText value="#{dis.descricao}"></h:outputText>
 								</p:column>
 
-								<p:column headerText="Data de Término">
-									<h:outputText value="#{cur.dataTermino}"></h:outputText>
+								<p:column headerText="Professor">
+									<h:outputText value="#{dis.professor.nome}"></h:outputText>
 								</p:column>
 
-								<p:column headerText="Horas/Aula">
-									<h:outputText value="#{cur.duracao}" />
+								<p:column headerText="Cursos Relacionados">
+									<ui:repeat var="cur" value="#{dis.cursos}">
+										<h:commandLink  action="cadastro-curso"
+											styleClass="btn btn-info btn-xs">
+											<f:setPropertyActionListener
+												target="#{cursoCadastroBean.curso}" value="#{cur}" />
+											<h:outputText value="#{cur.nome}  " />
+										</h:commandLink>
+									</ui:repeat>
 								</p:column>
-								<p:column headerText="Vagas">
-									<h:outputText value="#{cur.vagas}" />
-								</p:column>
-								<p:column headerText="Escola">
-								
-										<h:commandLink  action="cadastro-escola"
-										styleClass="btn btn-info btn-xs">
-										<i class="fa fa-pencil" style="margin-right: 3px" />
-										<f:setPropertyActionListener
-											target="#{escolaCadastroBean.escola}" value="#{cur.escola}" />
-												<h:outputText value="#{cur.escola.nome}" />
-									</h:commandLink>
-								</p:column>
+
 								<p:column headerText="Opções">
-									<h:commandLink id="btnsearch" action="cadastro-curso"
+									<h:commandLink id="btnsearch" action="cadastro-disciplina"
 										styleClass="btn btn-info btn-xs">
 										<i class="fa fa-pencil" style="margin-right: 3px" />
+										Editar
 										<f:setPropertyActionListener
-											target="#{cursoCadastroBean.curso}" value="#{cur}" />
+											target="#{disciplinaCadastroBean.disciplina}" value="#{dis}" />
+
 									</h:commandLink>
 									<p:commandLink pa:data-toggle="modal" pa:data-target="#myModal"
 										style="margin-right: 3px" title="Deletar"
 										class="btn btn-danger btn-xs" type="button">
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-											target="#{cursoListaBean.idCursoRemover}"
-											value="#{cur.idCurso}" />
+											target="#{disciplinaListaBean.idDisciplinaremover}"
+											value="#{dis.idDisciplina}" />
 									</p:commandLink>
 
 								</p:column>
@@ -84,14 +82,15 @@
 								<span aria-hidden="true">&#215;</span>
 							</button>
 							<h4 class="modal-title" id="myModalLabel">Deseja deletar
-								este curso?</h4>
+								este disciplina?</h4>
 						</div>
-						
+
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default"
 								data-dismiss="modal">Não</button>
-							<p:commandLink action="#{cursoListaBean.remove()}" type="button"
-								class="btn btn-primary btn-danger" pa:data-dismiss="modal">Deletar</p:commandLink>
+							<p:commandLink action="#{disciplinaListaBean.remove()}"
+								type="button" class="btn btn-primary btn-danger"
+								pa:data-dismiss="modal">Deletar</p:commandLink>
 						</div>
 					</div>
 				</div>
