--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-escola.xhtml
@@ -16,7 +16,7 @@
 
 <h:body>
 
-	<ui:composition template="_template.xhtml">
+	<<ui:composition template="/template/_template.xhtml">
 		<ui:define name="title">
 	    Cadastro de Escolas
 	</ui:define>
