Feito Query alunoPorProfessor + minor changes

--- a/JavaWeb-exAvaliacao/WebContent/index.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/index.xhtml
@@ -11,7 +11,7 @@
 
 <h:body>
 
-	<ui:composition template="_template.xhtml">
+	<ui:composition template="/template/_template.xhtml">
 		<ui:define name="title">
 	    Lista de Figurinhas
 	</ui:define>
