--- a/JavaWeb-exAvaliacao/WebContent/index.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/index.xhtml
@@ -15,13 +15,15 @@
 		<ui:define name="title">
 	    Lista de Figurinhas
 	</ui:define>
-	
+
 		<ui:define name="content">
-		
+
 			<section id="parallaxBar" data-speed="6" data-type="background">
 
 				<div class="container top-landing text-center">
 					<h1>Pós Graduações XYZ</h1>
+				
+
 					<img class="img-responsive center-block" alt="logo"
 						src="https://weambassadors.files.wordpress.com/2014/04/xyz_logo_circle-01.png" />
 					<img class="img-responsive center-block" width="256px"
@@ -42,7 +44,7 @@
 								class="tile-image" />
 							<p class="text">Lorem ipsum dolor sit amet, consectetur
 								adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+								dolore magna nim veniam, quis nostrud
 								exercitation ullamco laboris nisi ut aliquip ex ea commodo
 								consequat.</p>
 						</div>
@@ -93,9 +95,9 @@
 			<div class="container-fluid ribbon text-center">
 
 				<h3 class="headers" style="margin-top: 10px; margin-bottom: 10px">Locais</h3>
-				
-					<p:gmap id="map" center="-23.552241,-46.636509" zoom="10" type="ROAD" model="#{markersView.simpleModel}"
-				/>
+
+				<p:gmap id="map" center="-23.552241,-46.636509" zoom="10"
+					type="ROAD" model="#{markersView.simpleModel}" />
 			</div>
 
 		</ui:define>
@@ -104,7 +106,7 @@
 
 	<!-- Main jumbotron for a primary marketing message or call to action -->
 
-	
+
 
 	<!--JavaScript
     ================================================== -->
