Fixed redirecionamento conforme as pastas

--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
@@ -52,7 +52,7 @@
 									</h:commandLink>
 								</p:column>
 								<p:column headerText="Opções">
-									<h:commandLink id="btnsearch" action="cadastro-curso"
+									<h:commandLink id="btnsearch" action="/cadastro/cadastro-curso"
 										styleClass="btn btn-info btn-xs">
 										<i class="fa fa-pencil" style="margin-right: 3px" />
 										<f:setPropertyActionListener
