--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
@@ -48,7 +48,7 @@
 								</p:column>
 
 								<p:column headerText="Opções">
-									<h:commandLink id="btnsearch" action="cadastro-disciplina"
+									<h:commandLink id="btnsearch" action="/cadastro/cadastro-disciplina"
 										styleClass="btn btn-info btn-xs">
 										<i class="fa fa-pencil" style="margin-right: 3px" />
 										Editar
