--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-escola.xhtml
@@ -52,7 +52,7 @@
 								</p:column>
 								
 								<p:column headerText="Opções">
-									<h:commandLink id="btnsearch" action="cadastro-escola"
+									<h:commandLink id="btnsearch" action="/cadastro/cadastro-escola"
 										styleClass="btn btn-info btn-xs">
 										<i class="fa fa-pencil" style="margin-right: 3px" />
 										<f:setPropertyActionListener
