--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
@@ -54,7 +54,7 @@
 									</ui:repeat>
 								</p:column>
 								<p:column headerText="Opções">
-									<h:commandLink id="btnsearch" action="cadastro-professor"
+									<h:commandLink id="btnsearch" action="/cadastro/cadastro-professor"
 										styleClass="btn btn-info btn-xs">
 										<i class="fa fa-pencil" style="margin-right: 3px" />
 										Editar
