Fixed links conforme as pastas

--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
@@ -43,7 +43,7 @@
 								</p:column>
 								<p:column headerText="Escola">
 								
-										<h:commandLink  action="cadastro-escola"
+										<h:commandLink  action="/cadastro/cadastro-escola"
 										styleClass="btn btn-info btn-xs">
 										<i class="fa fa-pencil" style="margin-right: 3px" />
 										<f:setPropertyActionListener
