--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
@@ -41,7 +41,7 @@
 								<p:column headerText="Disciplinas">
 									<ui:repeat var="dis" value="#{prof.disciplinas}">
 									
-									<h:commandLink action="cadastro-disciplina"
+									<h:commandLink action="/cadastro/cadastro-disciplina"
 										styleClass="btn btn-info btn-xs">
 										
 											<h:outputText value="#{dis.nome}" />
