--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-escola.xhtml
@@ -42,7 +42,7 @@
 								
 								<p:column headerText="Cursos Relacionados">
 									<ui:repeat var="cur" value="#{esc.cursos}">
-										<h:commandLink  action="cadastro-curso"
+										<h:commandLink  action="/cadastro/cadastro-curso"
 											styleClass="btn btn-info btn-xs">
 											<f:setPropertyActionListener
 												target="#{cursoCadastroBean.curso}" value="#{cur}" />
