Code clean up + ajuste 1:n curso-disciplina

--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-aluno.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-aluno.xhtml
@@ -119,7 +119,7 @@
 
 								<h:outputLabel value="Curso" style="font-weight:bold" />
 								<h:selectOneMenu converter="#{simpleEntityConverter}"
-									styleClass="form-control select select-primary select-block mbl"
+									styleClass="form-control multiselect multiselect-info"
 									value="#{alunoCadastroBean.aluno.curso}">
 
 									<f:selectItems value="#{alunoCadastroBean.listCurso}" var="cur"
