--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
@@ -55,6 +55,7 @@
 									<h:commandLink id="btnsearch" action="/cadastro/cadastro-curso"
 										styleClass="btn btn-info btn-xs">
 										<i class="fa fa-pencil" style="margin-right: 3px" />
+										Editar
 										<f:setPropertyActionListener
 											target="#{cursoCadastroBean.curso}" value="#{cur}" />
 									</h:commandLink>
