--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
@@ -42,7 +42,7 @@
 											styleClass="btn btn-info btn-xs">
 											<f:setPropertyActionListener
 												target="#{cursoCadastroBean.curso}" value="#{dis.curso}" />
-											<h:outputText value="#{cur.nome}  " />
+											<h:outputText value="#{dis.curso.nome}  " />
 										</h:commandLink>
 									
 								</p:column>
