--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-professor.xhtml
@@ -25,7 +25,7 @@
 				<h2>Cadastro de Professor</h2>
 				<h:form prependId="false">
 					<h:inputHidden
-						value="#{professorCadastroBean.professor.rmProfessor}" />
+						value="#{professorCadastroBean.professor.id}" />
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group">
@@ -34,7 +34,7 @@
 								<div class="input-group">
 									<span class="input-group-addon">RM</span>
 									<h:inputText disabled="true"
-										value="#{professorCadastroBean.professor.rmProfessor}"
+										value="#{professorCadastroBean.professor.id}"
 										pa:type="number" class="form-control" />
 
 								</div>
@@ -129,7 +129,7 @@
 								<c:if
 									test="${professorCadastroBean.professor.nome != null}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{professorCadastroBean.atualizarProfessor()}"
+										action="#{professorCadastroBean.atualizarProfessor}"
 										type="submit" value="Atualizar" />
 								</c:if>
 								<c:if
@@ -137,7 +137,7 @@
 									<h:commandButton
 										
 										styleClass="btn btn-block btn-lg btn-primary"
-										action="#{professorCadastroBean.cadastrarProfessor()}"
+										action="#{professorCadastroBean.cadastrarProfessor}"
 										type="submit" value="Cadastrar" />
 								</c:if>
 							</div>
