--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-aluno.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-aluno.xhtml
@@ -67,7 +67,7 @@
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
 											target="#{alunoListaBean.idAlunoremover}"
-											value="#{alu.rmAluno}" />
+											value="#{alu.id}" />
 									</p:commandLink>
 
 								</p:column>
