--- a/JavaWeb-exAvaliacao/WebContent/index.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/index.xhtml
@@ -13,7 +13,7 @@
 
 	<ui:composition template="/template/_template.xhtml">
 		<ui:define name="title">
-	    Lista de Figurinhas
+	    teste
 	</ui:define>
 
 		<ui:define name="content">
