--- a/JavaWeb-exAvaliacao/WebContent/index.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/index.xhtml
@@ -14,6 +14,8 @@
 	<ui:composition template="/template/_template.xhtml">
 		<ui:define name="title">
 	    Lista de Figurinhas
+	    
+	    loCAL TESTE
 	</ui:define>
 
 		<ui:define name="content">
