--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-escola.xhtml
@@ -27,7 +27,7 @@
 				<h:messages globalOnly="true" />
 				<h2>Cadastro de Escolas</h2>
 				<h:form prependId="false">
-					<h:inputHidden value="#{escolaCadastroBean.escola.idEscola}" />
+					<h:inputHidden value="#{escolaCadastroBean.escola.id}" />
 
 					<div class="row">
 						<div class="col-md-6">
@@ -77,12 +77,12 @@
 						<div class="col-sm-12">
 							<div class="form-group">
 
-								<c:if test="${empty escolaCadastroBean.escola.idEscola}">
+								<c:if test="${empty escolaCadastroBean.escola.id}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
 										action="#{escolaCadastroBean.cadastrarEscola}" type="submit"
 										value="Cadastrar" />
 								</c:if>
-								<c:if test="${not empty escolaCadastroBean.escola.idEscola}">
+								<c:if test="${not empty escolaCadastroBean.escola.id}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
 										action="#{escolaCadastroBean.atualizarEscola}" type="submit"
 										value="Atualizar"  />
