Refatorado sistema de RM e ID

--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-curso.xhtml
@@ -65,7 +65,7 @@
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
 											target="#{cursoListaBean.idCursoRemover}"
-											value="#{cur.idCurso}" />
+											value="#{cur.id}" />
 									</p:commandLink>
 
 								</p:column>
