--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-escola.xhtml
@@ -63,7 +63,7 @@
 										class="btn btn-danger btn-xs" type="button">
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener 
-							target="#{escolaListaBean.idEscolaremover}" value="#{esc.idEscola}"/>
+							target="#{escolaListaBean.idEscolaremover}" value="#{esc.id}"/>
 									</p:commandLink>
 
 								</p:column>
