--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
@@ -67,7 +67,7 @@
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
 											target="#{professorListaBean.idProfessorremover}"
-											value="#{prof.rmProfessor}" />
+											value="#{prof.id}" />
 									</p:commandLink>
 
 								</p:column>
