--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
@@ -62,7 +62,7 @@
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
 											target="#{disciplinaListaBean.idDisciplinaremover}"
-											value="#{dis.idDisciplina}" />
+											value="#{dis.id}" />
 									</p:commandLink>
 
 								</p:column>
