--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-professor.xhtml
@@ -66,7 +66,7 @@
 										class="btn btn-danger btn-xs" type="button">
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-											target="#{professorListaBean.idProfessorremover}"
+											target="#{professorListaBean.rmProfessorremover}"
 											value="#{prof.id}" />
 									</p:commandLink>
 
