--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-aluno.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-aluno.xhtml
@@ -18,6 +18,7 @@
 			<div class="container top-landing">
 				<h:messages />
 				<h:form prependId="false">
+				
 					<h2>Lista de Alunos</h2>
 					<div class="row">
 						<div class="col-sm-12">
@@ -66,7 +67,7 @@
 										class="btn btn-danger btn-xs" type="button">
 										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-											target="#{alunoListaBean.idAlunoremover}"
+											target="#{alunoListaBean.rmAlunoremover}"
 											value="#{alu.id}" />
 									</p:commandLink>
 
