--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-curso.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-curso.xhtml
@@ -8,12 +8,16 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 <h:body>
-	<ui:composition template="/template/_template.xhtml">
+	<ui:composition template="/template/_template-admin.xhtml">
 		<ui:define name="title">
 	    Cadastro de Cursos
 	</ui:define>
 		<ui:define name="content">
-			<div class=" container top-landing">
+			<f:metadata>
+				<f:viewParam name="idCurso" value="#{cursoCadastroBean.idCurso}" />
+				<f:event type="preRenderView" listener="#{cursoCadastroBean.init}" />
+			</f:metadata>
+			<div class="container top-landing">
 				<h:messages id="messages" showSummary="true" />
 				<h2>Cadastro de Cursos</h2>
 				<h:form id="cursoForm" prependId="false">
@@ -48,8 +52,7 @@
 								<h:outputLabel value="Data de Início " style="font-weight:bold" />
 								<h:inputText required="true"
 									requiredMessage="Insira uma data de início" id="dataInicio"
-									 pa:data-language='pt-br'
-									styleClass="form-control date"
+									pa:data-language='pt-br' styleClass="form-control date"
 									value="#{cursoCadastroBean.curso.dataInicio}">
 									<f:convertDateTime pattern="dd/mm/yyyy" />
 								</h:inputText>
@@ -61,8 +64,7 @@
 									style="font-weight:bold" />
 								<h:inputText required="true"
 									requiredMessage="Insira uma data de término" id="dataTermino"
-									 pa:data-language='pt-br'
-									styleClass="form-control date"
+									pa:data-language='pt-br' styleClass="form-control date"
 									value="#{cursoCadastroBean.curso.dataTermino}">
 									<f:convertDateTime pattern="dd/mm/yyyy" />
 								</h:inputText>
@@ -83,11 +85,11 @@
 							<div class="form-group">
 								<h:outputLabel value="Escola" style="font-weight:bold" />
 								<h:selectOneMenu required="true"
-									requiredMessage="Insira uma escola" immediate="true"
+									requiredMessage="Insira uma escola"
 									converter="#{simpleEntityConverter}"
 									styleClass="form-control multiselect multiselect-info"
 									value="#{cursoCadastroBean.curso.escola}">
-
+									<f:selectItem itemValue="#{null}" itemLabel="Selecione" />
 									<f:selectItems value="#{cursoCadastroBean.listEscolaTotal}"
 										var="esc" itemValue="#{esc}" itemLabel="#{esc.nome}" />
 								</h:selectOneMenu>
@@ -131,12 +133,19 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-group">
-								<c:if test="${empty cursoCadastroBean.curso.id}">
+								<c:if
+									test="${empty param.idCurso and empty cursoCadastroBean.curso.id}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
 										action="#{cursoCadastroBean.cadastrarCurso}" type="submit"
 										value="Cadastrar" />
 								</c:if>
-								<c:if test="${not empty cursoCadastroBean.curso.id}">
+								<c:if test="${not empty param.idCurso}">
+									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+										action="#{cursoCadastroBean.atualizarCurso}" type="submit"
+										value="Atualizar" />
+								</c:if>
+								<c:if
+									test="${empty param.idCurso and not empty cursoCadastroBean.curso.id}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
 										action="#{cursoCadastroBean.atualizarCurso}" type="submit"
 										value="Atualizar" />
