--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-disciplina.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-disciplina.xhtml
@@ -8,11 +8,17 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 <h:body>
-	<ui:composition template="/template/_template.xhtml">
+	<ui:composition template="/template/_template-admin.xhtml">
 		<ui:define name="title">
 	    Cadastro de Disciplina
 	</ui:define>
 		<ui:define name="content">
+			<f:metadata>
+				<f:viewParam name="idDisciplina"
+					value="#{disciplinaCadastroBean.idDisciplina}" />
+				<f:event type="preRenderView"
+					listener="#{disciplinaCadastroBean.init}" />
+			</f:metadata>
 			<div class=" container top-landing">
 				<h:messages id="messages" showSummary="true" />
 				<h2>Cadastro de Disciplina</h2>
@@ -54,10 +60,11 @@
 						<div class="col-md-6">
 							<div class="form-group">
 								<h:outputLabel value="Professor" style="font-weight:bold" />
-								<h:selectOneListbox id="selectProf" 
-									 converter="omnifaces.SelectItemsConverter"
+								<h:selectOneListbox id="selectProf"
+									converter="omnifaces.SelectItemsConverter"
 									styleClass="form-control multiselect multiselect-info"
 									value="#{disciplinaCadastroBean.disciplina.professor}">
+									<f:selectItem itemValue="#{null}" itemLabel="Selecione" />
 									<f:selectItems value="#{disciplinaCadastroBean.listProf}"
 										var="prof" itemValue="#{prof}" itemLabel="#{prof.nome}" />
 								</h:selectOneListbox>
@@ -73,15 +80,22 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-group">
-								<c:if test="${empty disciplinaCadastroBean.disciplina.id}">
+								<c:if
+									test="${empty param.idDisciplina and empty disciplinaCadastroBean.disciplina.id}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{disciplinaCadastroBean.cadastrarDisciplina()}"
-										type="submit" value="Cadastrar" />
+										action="#{disciplinaCadastroBean.cadastrarDisciplina}" type="submit"
+										value="Cadastrar" />
 								</c:if>
-								<c:if test="${not empty disciplinaCadastroBean.disciplina.id }">
+								<c:if test="${not empty param.idDisciplina}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{disciplinaCadastroBean.atualizarDisciplina()}"
-										type="submit" value="Atualizar" />
+										action="#{disciplinaCadastroBean.atualizarDisciplina}" type="submit"
+										value="Atualizar" />
+								</c:if>
+								<c:if
+									test="${empty param.idDisciplina and not empty disciplinaCadastroBean.disciplina.id}">
+									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+										action="#{disciplinaCadastroBean.atualizarDisciplina}" type="submit"
+										value="Atualizar" />
 								</c:if>
 							</div>
 						</div>
