--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-escola.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-escola.xhtml
@@ -6,32 +6,38 @@
 	xmlns:jsf="http://xmlns.jcp.org/jsf/"
 	xmlns:pa="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-	xmlns:fn="http://java.sun.com/jsp/jstl/functions">
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 <h:body>
-	<ui:composition template="/template/_template.xhtml">
+	<ui:composition template="/template/_template-admin.xhtml">
 		<ui:define name="title">
 	    Cadastro de Escolas
 	</ui:define>
 		<ui:define name="content">
+			<f:metadata>
+				<f:viewParam name="idEscola" value="#{escolaCadastroBean.idEscola}" />
+				<f:event type="preRenderView" listener="#{escolaCadastroBean.init}" />
+			</f:metadata>
 			<div class="container top-landing">
 				<h:messages id="messages" showSummary="true" />
 				<h2>Cadastro de Escolas</h2>
 				<h:form prependId="false">
-					<h:inputHidden value="#{escolaCadastroBean.escola.id}" />
+
 					<div class="row">
 						<div class="col-md-6">
 							<div class="form-group has-warning">
 								<h:outputLabel value="Nome" style="font-weight:bold" />
-								<h:inputText required="true" requiredMessage="Insira um nome" pa:placeholder="Nome"
-									value="#{escolaCadastroBean.escola.nome}"
+								<h:inputText required="true" requiredMessage="Insira um nome"
+									pa:placeholder="Nome" value="#{escolaCadastroBean.escola.nome}"
 									styleClass="form-control" />
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="form-group">
-								<h:outputLabel value="Quantidade de salas salas" style="font-weight:bold" />
-								<h:inputText required="true" requiredMessage="Insira uma quantidade de salas" pa:placeholder="Qtd. Salas" pa:type="number"
+								<h:outputLabel value="Quantidade de salas"
+									style="font-weight:bold" />
+								<h:inputText required="true"
+									requiredMessage="Insira uma quantidade de salas"
+									pa:placeholder="Qtd. Salas" pa:type="number"
 									value="#{escolaCadastroBean.escola.salas}"
 									styleClass="form-control" />
 							</div>
@@ -41,7 +47,9 @@
 						<div class="col-md-6">
 							<div class="form-group">
 								<h:outputLabel value="Descrição Curta" style="font-weight:bold" />
-								<h:inputText required="true" requiredMessage="Insira um descrição" pa:placeholder="Descrição Curta"
+								<h:inputText required="true"
+									requiredMessage="Insira uma Descrição"
+									pa:placeholder="Descrição Curta"
 									value="#{escolaCadastroBean.escola.descricao}"
 									styleClass="form-control" />
 							</div>
@@ -49,7 +57,9 @@
 						<div class="col-md-6">
 							<div class="form-group">
 								<h:outputLabel value="Endereço" style="font-weight:bold" />
-								<h:inputText required="true" requiredMessage="Insira um endereço" id="address" pa:placeholder="Endereço"
+								<h:inputText required="true"
+									requiredMessage="Insira um Endereço" id="address"
+									pa:placeholder="Endereço"
 									value="#{escolaCadastroBean.escola.endereco}"
 									styleClass="form-control" />
 							</div>
@@ -58,12 +68,19 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-group">
-								<c:if test="${empty escolaCadastroBean.escola.id}">
+								<c:if
+									test="${empty param.idEscola and empty escolaCadastroBean.escola.id}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
 										action="#{escolaCadastroBean.cadastrarEscola}" type="submit"
 										value="Cadastrar" />
 								</c:if>
-								<c:if test="${not empty escolaCadastroBean.escola.id}">
+								<c:if test="${not empty param.idEscola}">
+									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+										action="#{escolaCadastroBean.atualizarEscola}" type="submit"
+										value="Atualizar" />
+								</c:if>
+								<c:if
+									test="${empty param.idEscola and not empty escolaCadastroBean.escola.id}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
 										action="#{escolaCadastroBean.atualizarEscola}" type="submit"
 										value="Atualizar" />
