--- a/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-professor.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/cadastro/cadastro-professor.xhtml
@@ -8,11 +8,16 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 <h:body>
-	<ui:composition template="/template/_template.xhtml">
+	<ui:composition template="/template/_template-admin.xhtml">
 		<ui:define name="title">
 	    Cadastro de Professor
 	</ui:define>
 		<ui:define name="content">
+			<f:metadata>
+				<f:viewParam name="idProfessor" value="#{professorCadastroBean.idProf}" />
+				<f:event type="preRenderView"
+					listener="#{professorCadastroBean.init}" />
+			</f:metadata>
 			<div class=" container top-landing">
 				<h:messages />
 				<h2>Cadastro de Professor</h2>
@@ -87,15 +92,22 @@
 					<div class="row">
 						<div class="col-sm-12">
 							<div class="form-group">
-								<c:if test="${professorCadastroBean.professor.rm != null}">
+								<c:if
+									test="${empty param.idProfessor and empty professorCadastroBean.professor.id}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{professorCadastroBean.atualizarProfessor}"
-										type="submit" value="Atualizar" />
+										action="#{professorCadastroBean.cadastrarProfessor}" type="submit"
+										value="Cadastrar" />
 								</c:if>
-								<c:if test="${professorCadastroBean.professor.rm == null}">
+								<c:if test="${not empty param.idProfessor}">
 									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
-										action="#{professorCadastroBean.cadastrarProfessor}"
-										type="submit" value="Cadastrar" />
+										action="#{professorCadastroBean.atualizarProfessor}" type="submit"
+										value="Atualizar" />
+								</c:if>
+								<c:if
+									test="${empty param.idProfessor and not empty professorCadastroBean.professor.id}">
+									<h:commandButton styleClass="btn btn-block btn-lg btn-primary"
+										action="#{professorCadastroBean.atualizarProfessor}" type="submit"
+										value="Atualizar" />
 								</c:if>
 							</div>
 						</div>
