--- a/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/lista/lista-disciplina.xhtml
@@ -9,7 +9,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 <h:body>
-	<ui:composition template="/template/_template.xhtml">
+	<ui:composition template="/template/_template-admin.xhtml">
 		<ui:define name="title">
 	    Lista de Disciplinas
 	</ui:define>
@@ -21,9 +21,9 @@
 					<h2>Lista de Disciplinas</h2>
 					<div class="row">
 						<div class="col-sm-12">
-							<p:dataTable emptyMessage="Nenhum resultado encontrado" id="disciplinaTable" widgetVar="disciplinaTable"
-								class="table" var="dis"
-								value="#{disciplinaListaBean.listDisciplina}">
+							<p:dataTable emptyMessage="Nenhum resultado encontrado"
+								id="disciplinaTable" widgetVar="disciplinaTable" class="table"
+								var="dis" value="#{disciplinaListaBean.listDisciplina}">
 								<p:column headerText="Nome">
 									<h:outputText value="#{dis.nome}" />
 								</p:column>
@@ -33,38 +33,59 @@
 								</p:column>
 
 								<p:column headerText="Professor">
-									<h:outputText value="#{dis.professor.nome}"></h:outputText>
-								</p:column>
-
-								<p:column headerText="Cursos Relacionados">
-									
-										<h:commandLink  action="/cadastro/cadastro-curso"
+									<div align="center">
+										<h:link rendered="#{not empty dis.professor}"
+											outcome="/cadastro/cadastro-professor"
 											styleClass="btn btn-info btn-xs">
-											<f:setPropertyActionListener
-												target="#{cursoCadastroBean.curso}" value="#{dis.curso}" />
-											<h:outputText value="#{dis.curso.nome}  " />
-										</h:commandLink>
+											<i class="fa fa-pencil" style="margin-right: 3px" />
+											#{dis.professor.nome}
+											<f:param name="idCurso" value="#{dis.professor.id}" />
+										</h:link>
+										<p:commandLink rendered="#{empty dis.professor}"
+											style="margin-right: 3px" class="btn btn-danger btn-xs"
+											type="button">
+											<i class="fa fa-exclamation-triangle"
+												style="margin-right: 3px" />  Sem Professor!
+									</p:commandLink>
+									</div>
+								</p:column>
+								<p:column headerText="Cursos Relacionados">
+									<div align="center">
+										<h:link rendered="#{not empty dis.curso}"
+											outcome="/cadastro/cadastro-curso"
+											styleClass="btn btn-info btn-xs">
+											<i class="fa fa-pencil" style="margin-right: 3px" />
+											#{dis.curso.nome}
+											<f:param name="idCurso" value="#{dis.curso.id}" />
+										</h:link>
+										<p:commandLink rendered="#{empty dis.curso}"
+											style="margin-right: 3px" class="btn btn-danger btn-xs"
+											type="button">
+											<i class="fa fa-exclamation-triangle"
+												style="margin-right: 3px" />  Sem Curso!
 									
+									</p:commandLink>
+									</div>
+
 								</p:column>
 
 								<p:column headerText="Opções">
-									<h:commandLink id="btnsearch" action="/cadastro/cadastro-disciplina"
-										styleClass="btn btn-info btn-xs">
-										<i class="fa fa-pencil" style="margin-right: 3px" />
+									<div align="center">
+										<h:link id="btnsearch" outcome="/cadastro/cadastro-disciplina"
+											styleClass="btn btn-info btn-xs">
+											<i class="fa fa-pencil" style="margin-right: 3px" />
 										Editar
-										<f:setPropertyActionListener
-											target="#{disciplinaCadastroBean.disciplina}" value="#{dis}" />
-
-									</h:commandLink>
-									<p:commandLink pa:data-toggle="modal" pa:data-target="#myModal"
-										style="margin-right: 3px" title="Deletar"
-										class="btn btn-danger btn-xs" type="button">
-										<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
+										<f:param name="idDisciplina" value="#{dis.id}" />
+										</h:link>
+										<p:commandLink pa:data-toggle="modal"
+											pa:data-target="#myModal" style="margin-right: 3px"
+											title="Deletar" class="btn btn-danger btn-xs" type="button">
+											<i class="fa fa-trash-o" style="margin-right: 3px" /> Deletar
 									<f:setPropertyActionListener
-											target="#{disciplinaListaBean.idDisciplinaremover}"
-											value="#{dis.id}" />
-									</p:commandLink>
-
+												target="#{disciplinaListaBean.disciplinaremover}"
+												value="#{dis}" />
+										</p:commandLink>
+									</div>
 								</p:column>
 							</p:dataTable>
 						</div>
