--- a/JavaWeb-exAvaliacao/WebContent/index.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/index.xhtml
@@ -6,12 +6,13 @@
 	xmlns:pa="http://xmlns.jcp.org/jsf/passthrough"
 	xmlns:p="http://primefaces.org/ui">
 <h:body>
-	<ui:composition template="/template/_template.xhtml">
+	<ui:composition template="/template/_template-#{loginType}.xhtml">
 		<ui:define name="title">
-	</ui:define>
+		</ui:define>
+
 		<ui:define name="content">
 			<section id="parallaxBar" data-speed="6" data-type="background">
-				<div class="container top-landing text-center">
+				<div class="container text-center">
 					<h1>Pós Graduações XYZ</h1>
 					<img class="img-responsive center-block" alt="logo"
 						src="https://weambassadors.files.wordpress.com/2014/04/xyz_logo_circle-01.png" />
@@ -31,9 +32,8 @@
 								class="tile-image" />
 							<p class="text">Lorem ipsum dolor sit amet, consectetur
 								adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-								dolore magna nim veniam, quis nostrud
-								exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat.</p>
+								dolore magna nim veniam, quis nostrud exercitation ullamco
+								laboris nisi ut aliquip ex ea commodo consequat.</p>
 						</div>
 
 						<div class="col-sm-12 col-md-6 col-lg-3">
@@ -44,7 +44,7 @@
 							<p class="text">Sed partem menandri disputationi an, legere
 								audiam dissentiet pri no. No qui explicari reformidans, purto
 								assum eloquentiam at mel. Ea feugiat accumsan voluptaria nec,
-								habeo labores expetenda mei ad, vidit mediocritatem vis id.</p>
+								habeo labores expetenda mei ad.</p>
 
 						</div>
 						<div class="col-sm-12 col-md-6 col-lg-3">
@@ -79,7 +79,8 @@
 			</section>
 
 
-			<div class="container-fluid ribbon text-center">
+			<div class="container-fluid ribbon text-center"
+				style="padding-left: 0px; padding-right: 0px;">
 
 				<h3 class="headers" style="margin-top: 10px; margin-bottom: 10px">Locais</h3>
 
@@ -88,6 +89,7 @@
 			</div>
 
 		</ui:define>
+
 		<ui:define name="footer"></ui:define>
 	</ui:composition>
 </h:body>
