--- a/JavaWeb-exAvaliacao/WebContent/userInvalido.xhtml
+++ b/JavaWeb-exAvaliacao/WebContent/userInvalido.xhtml
@@ -1,11 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"> 
-
-<h:head></h:head> 
-<body> 
-VOCÊ NÃO PODE ACESSAR ESSA PÁGINA
-</body> 
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:pa="http://xmlns.jcp.org/jsf/passthrough"
+	xmlns:p="http://primefaces.org/ui">
+<h:body>
+	<ui:composition template="/template/_template-#{loginType}.xhtml">
+		<ui:define name="title">
+		</ui:define>
+		<ui:define name="content">
+			<div class="container text-center ">
+				<h1 style="margin-top: 300px"><i class="fa fa-exclamation-triangle"/>Você não pode acessar esta página<i class="fa fa-exclamation-triangle"/></h1>
+			</div>
+		</ui:define>
+		<ui:define name="footer"></ui:define>
+	</ui:composition>
+</h:body>
 </html>
